--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ nav {
   font-weight: 500;
   font-size: 1.5rem;
   list-style: 2rem;
+  z-index: 20;
+  position: relative;
 }
 
 .name {
@@ -43,4 +45,24 @@ main {
 
 .page {
   padding: 48px;
+}
+
+.home {
+  position: absolute;
+  color: rgb(48, 48, 48);
+  background-color: rgb(243, 199, 116);
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.contact {
+  position: absolute;
+  color: rgb(48, 48, 48);
+  background-color: rgb(223, 104, 88);
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
 }
