--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body,
+html {
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
 
 a {
   color: inherit;
@@ -21,6 +28,13 @@ nav {
   list-style: 2rem;
   z-index: 20;
   position: relative;
+  font-weight: bold;
+}
+
+.selectedNav {
+  font-style: italic;
+  pointer-events: none;
+  text-decoration: none;
 }
 
 .name {
@@ -28,6 +42,10 @@ nav {
   justify-content: flex-end;
   padding: 20px;
   font-size: 75px;
+}
+
+.nameContainer {
+  overflow: hidden;
 }
 
 .content {
@@ -47,7 +65,9 @@ main {
   padding: 48px;
 }
 
-.home {
+.home,
+.contact,
+.projects {
   position: absolute;
   color: rgb(48, 48, 48);
   background-color: rgb(243, 199, 116);
@@ -58,11 +78,9 @@ main {
 }
 
 .contact {
-  position: absolute;
-  color: rgb(48, 48, 48);
   background-color: rgb(223, 104, 88);
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
+}
+
+.projects {
+  background-color: aquamarine;
 }
