--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ nav {
 .name {
   display: flex;
   justify-content: flex-end;
-  padding: 20px;
+  padding: 20px 40px;
   font-size: 75px;
 }
 
@@ -49,7 +49,8 @@ nav {
   height: 200px;
 }
 
-.homeContent {
+.homeContent,
+.content {
   display: flex;
   justify-content: space-between;
   padding: 30px;
@@ -121,6 +122,7 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .projectContainer { 
@@ -141,20 +143,44 @@ main {
 
 .projectLinks {
   position: absolute;
-  height: 400px;
-  width: 500px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.25s;
+}
+
+.projectLinks:hover {
+  backdrop-filter: blur(4px);
+  opacity: 1;
+}
+
+.projectLinks > a {
+  background-color: rgb(48, 48, 48);
+  outline: none;
+  border: 1px solid white;
+  border-radius: 0.25rem;
+  color: white;
+  margin: 1rem 9rem;
+  padding: 0.25rem;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.projectLinks > a:hover {
+  cursor: pointer;
+  background-color: black;
 }
 
 .projectsContainter {
   border: 1px solid black;
   background-color: rgb(48, 48, 48);
   border-radius: 2rem;
-  padding: 1rem;
+  padding: 0.6rem;
   display: flex;
   justify-content: space-around;
   margin: 0 50px;
