--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ nav {
 .name {
   display: flex;
   justify-content: flex-end;
-  padding: 20px 40px;
+  padding: 20px 80px;
   font-size: 75px;
 }
 
@@ -121,7 +121,7 @@ main {
 .project {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit:contain;
   display: block;
 }
 
@@ -180,8 +180,8 @@ main {
   border: 1px solid black;
   background-color: rgb(48, 48, 48);
   border-radius: 2rem;
-  padding: 0.6rem;
+  padding: 0.6rem 0;
   display: flex;
   justify-content: space-around;
-  margin: 0 50px;
+  margin: 0 80px;
 }
