--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ html {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 
@@ -39,8 +40,8 @@ nav {
 
 .name {
   display: flex;
-  justify-content: flex-end;
-  padding: 20px 80px;
+  justify-content: flex-end; 
+  padding: 20px 80px 0px 0px;
   font-size: 75px;
 }
 
@@ -113,7 +114,7 @@ main {
 .center {
   display: flex;
   justify-content: space-between;
-  padding: 40px;
+  padding: 40px 0px 40px 40px;
   margin-top: 50px;
 }
 
@@ -133,6 +134,26 @@ main {
   border-radius: 1rem;
   text-align: center;
   color: white;
+}
+
+.logoOverflow {
+  position: relative;
+  width: 500px;
+  height: 500px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.logo {
+  width: 100%;
+  height: auto;
+  object-fit: fill;
+  display: block;
+}
+
+.contactLogos {
+  display: flex;
+  justify-content: space-around;
 }
 
 .project1:hover {
