--- a/src/App.css
+++ b/src/App.css
@@ -89,19 +89,7 @@ main {
   background-color: rgb(99, 230, 186);
 }
 
-.profilePhoto {
-  width: 100%;
-  height: auto;
-}
-
-.imgCircle { 
-  position: relative;
-  width: 400px; 
-  height: 400px; 
-  overflow: hidden; 
-  border-radius: 50%; 
-  margin-top: 125px;
-}
+/* <----- Home Page -----> */
 
 .center {
   display: flex;
@@ -110,13 +98,58 @@ main {
   margin-top: 50px;
 }
 
+.imgCircle { 
+  position: relative;
+  width: 400px; 
+  height: 400px; 
+  border-radius: 50%; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profilePhoto {
+  position: absolute;
+  width: 325px;
+  height: 325px;
+  background: url(public/Images/Me.jpg);
+  background-size: cover;
+  border-radius: 50%;
+}
+
+.rotating-curved-text {
+  -webkit-animation: spin 15s linear infinite;
+  -moz-animation: spin 15s linear infinite;
+  animation: spin 15s linear infinite;
+}
+
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
+/* .circleText {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+} */
+
 /* <----- Projects Page -----> */
 
 .projectsContainter {
-  /* border: 1px solid black; */
-  /* background-color: rgb(48, 48, 48); */
-  border-radius: 2rem;
-  padding: 0.6rem 0;
   display: flex;
   justify-content: space-around;
   margin: 0 80px;
