--- a/src/App.css
+++ b/src/App.css
@@ -222,11 +222,22 @@ main {
   height: 400px;
   overflow: hidden;
   border-radius: 50%;
+  border: 1px solid black;
 }
 
 .logo {
   width: 100%;
   height: auto;
-  object-fit: fill;
+  object-fit: cover;
   display: block;
+  position: absolute;
+}
+
+.logo-front {
+  transition: opacity 1s;
+}
+
+.logo-front:hover {
+  opacity: 0;
+  transform: rotateY('180deg')
 }
