--- a/src/App.css
+++ b/src/App.css
@@ -140,13 +140,6 @@ main {
   }
 }
 
-
-/* .circleText {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-} */
-
 /* <----- Projects Page -----> */
 
 .projectsContainter {
@@ -233,11 +226,27 @@ main {
   position: absolute;
 }
 
+.logoText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -115%);
+  font-size: 50px;
+  color: rgb(223, 104, 88);
+  border: 1px rgb(48, 48, 48) solid;
+  border-radius: 2rem;
+  padding: 10px 20px;
+  background: rgb(48, 48, 48);
+}
+
+.email {
+  transform: translate(-50%, -270%);
+}
+
 .logo-front {
   transition: opacity 1s;
 }
 
 .logo-front:hover {
   opacity: 0;
-  transform: rotateY('180deg')
 }
