--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   box-sizing: border-box;
 }
 
-h2 {
+h2,
+h3 {
   margin: 0.15rem;
 }
 
@@ -52,8 +53,6 @@ nav {
 }
 
 .name {
-  display: flex;
-  justify-content: flex-end; 
   padding: 0px 80px 0px 0px;
   font-size: 75px;
   margin: 0;
@@ -61,6 +60,8 @@ nav {
 
 .nameContainer {
   overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .bottom {
@@ -102,7 +103,6 @@ main {
 .center {
   display: flex;
   justify-content: space-around;
-  /* padding: 40px 0px 40px 40px; */
   margin-top: 50px;
 }
 
@@ -152,8 +152,8 @@ main {
 
 .projectsContainter {
   display: flex;
-  justify-content: space-around;
-  margin: 0 80px;
+  justify-content: center;
+  gap: 50px;
 }
 
 .projectContainer { 
@@ -211,6 +211,18 @@ main {
 
 /* <------ Contacts Page ------> */
 
+.contactText {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.contactPitch {
+  padding: 0px 70px 0px 0px;
+  text-align: center;
+}
+
 .contactLogos {
   display: flex;
   justify-content: space-around;
@@ -257,4 +269,9 @@ main {
 
 .logo-front:hover {
   opacity: 0;
+}
+
+.projectsName {
+  padding: 0;
+  text-decoration: underline;
 }
