--- a/src/App.css
+++ b/src/App.css
@@ -176,8 +176,8 @@ main {
 
 .logoOverflow {
   position: relative;
-  max-width: 400px;
-  max-height: 400px;
+  width: 400px;
+  height: 400px;
   overflow: hidden;
   border-radius: 50%;
   border: 1px solid black;
@@ -548,46 +548,6 @@ main {
   object-fit: fill;
   display: block;
 }
-
-/* .projectLinks {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  opacity: 0;
-  transition: opacity 0.25s;
-} */
-
-/* .projectLinks > a {
-  background-color: rgb(48, 48, 48);
-  outline: none;
-  border: 1px solid white;
-  border-radius: 0.25rem;
-  color: white;
-  margin: 1rem 9rem;
-  padding: 0.25rem;
-  font-weight: bold;
-  text-decoration: none;
-} */
-
-/* .projectLinks:hover {
-  backdrop-filter: blur(4px);
-  opacity: 1;
-} */
-
-/* .projectLinks > a:hover {
-  cursor: pointer;
-  background-color: black;
-} */
-/* 
-.projectsName {
-  padding: 0;
-  text-decoration: underline;
-} */
 }
 
 @media (hover: none) {
