--- a/src/App.css
+++ b/src/App.css
@@ -329,6 +329,14 @@ main {
     flex-direction: column;
     align-items: center;
   }
+
+  .contact {
+    background-color: rgb(223, 104, 88);
+  }
+  
+  .projects {
+    background-color: #3db376;
+  }
   
   ul {
     list-style-type: none;
