--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ html {
   left: 0px;
   width: 100%;
   height: 100%;
-  padding: 48px 48px 0px 48px;
+  padding: 0px 48px 0px 48px;
 }
 
 a {
@@ -103,7 +103,7 @@ main {
 .center {
   display: flex;
   justify-content: space-around;
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 .imgCircle { 
